css/style.css
@-webkit-keyframes fadeInLeft {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-50px);
    transform: translateX(-50px)
  }

  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
    transform: translateX(0)
  }
}

@keyframes fadeInLeft {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-50px);
    -ms-transform: translateX(-50px);
    transform: translateX(-50px)
  }

  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0)
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@media (min-width: 580px) {
  .side_icon {
    width: 40px;
    border: 3px solid black;
    border-radius: 50%;
  }

  #col1 {
    position: fixed;
    left: 0;
    top: 0;
    width: 3%;
  }

  #col2 {
    margin-left: 5%;
    overflow: auto;
  }

  #profile_l:hover::after {
    border: 3px solid black;
    border-radius: 50px;
    background-color: white;
    padding-left: 5px;
    padding-right: 5px;
    position: absolute;
    content: " About";
    -webkit-animation-name: fadeInLeft;
    -webkit-animation-duration: 0.5s;
    animation-name: fadeInLeft;
    animation-duration: 0.5s;
  }

  #dark_mode_btn:hover::before {
    border: 3px solid black;
    border-radius: 50px;
    background-color: white;
    padding-left: 5px;
    padding-right: 5px;
    content: " DarkMode";
    -webkit-animation-name: fadeIn;
    -webkit-animation-duration: 0.3s;
    animation-name: fadeIn;
    animation-duration: 0.3s;
  }

  #home_l:hover::after {
    border: 3px solid black;
    border-radius: 50px;
    background-color: white;
    padding-left: 5px;
    padding-right: 5px;
    position: absolute;
    content: " Home";
    -webkit-animation-name: fadeInLeft;
    -webkit-animation-duration: 0.5s;
    animation-name: fadeInLeft;
    animation-duration: 0.5s;
  }

  #education_l:hover::after {
    border: 3px solid black;
    border-radius: 50px;
    background-color: white;
    padding-left: 5px;
    padding-right: 5px;
    position: absolute;
    content: " Education";
    -webkit-animation-name: fadeInLeft;
    -webkit-animation-duration: 0.3s;
    animation-name: fadeInLeft;
    animation-duration: 0.3s;
  }

  #skills_l:hover::after {
    border: 3px solid black;
    border-radius: 50px;
    background-color: white;
    padding-left: 5px;
    padding-right: 5px;
    position: absolute;
    content: " Skills";
    -webkit-animation-name: fadeInLeft;
    -webkit-animation-duration: 0.3s;
    animation-name: fadeInLeft;
    animation-duration: 0.3s;
  }
  #projects_l:hover::after {
    border: 3px solid black;
    border-radius: 50px;
    background-color: white;
    padding-left: 5px;
    padding-right: 5px;
    position: absolute;
    content: " Projects";
    -webkit-animation-name: fadeInLeft;
    -webkit-animation-duration: 0.3s;
    animation-name: fadeInLeft;
    animation-duration: 0.3s;
  }
  #experience_l:hover::after {
    border: 3px solid black;
    border-radius: 50px;
    background-color: white;
    padding-left: 5px;
    padding-right: 5px;
    position: absolute;
    content: " Experience";
    -webkit-animation-name: fadeInLeft;
    -webkit-animation-duration: 0.3s;
    animation-name: fadeInLeft;
    animation-duration: 0.3s;
  }

  #contact_l:hover::after {
    border: 3px solid black;
    border-radius: 50px;
    background-color: white;
    padding-left: 5px;
    padding-right: 5px;
    position: absolute;
    content: " Contact";
    -webkit-animation-name: fadeInLeft;
    -webkit-animation-duration: 0.3s;
    animation-name: fadeInLeft;
    animation-duration: 0.3s;
  }
}

@media (max-width: 579px) {
  .side_icon {
    width: 35px;
    border: 3px solid black;
    border-radius: 50%;
  }
  #col1 {
    position: fixed;
    left: 0;
    top: 0;
    width: 3%;
  }

  #col2 {
    margin-left: 13%;
    overflow: auto;
  }
}

body {
  padding: 25px;
  background-color: white;
  color: black;
  font-size: 25px;
}

.dark-mode {
  background-color: #242526;
  color: white;
}

.dark-mode-btn {
  background-color: #39FF14;
}

.dark-mode-icon {
  background-color: white;
}

#dark_mode_btn{
  position: fixed;
  right:2px;
  bottom: 2px;
}

